--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Stranger Resume</h1>
-  <p>Contact me: (555) 667-8923 - Email: resume@gmail.com</p>
+  <p id="contact">Contact me: (555) 667-8923 - Email: resume@gmail.com</p>
   <div class="work">
     <h2>Work Experience</h2>
     <ol>
@@ -19,8 +19,8 @@
       <li>Different job</li>
     </ol>
   </div>
-  <p>This is a brief history of why I <span class="bold">should</span> have the job</p>
-<div class="education">
+  <p id="history">This is a brief history of why I <span class="bold">should</span> have the job</p>
+<div id="education">
   <h2>Education</h2>
   <ol>
     <li>Elementary school</li>
@@ -29,7 +29,7 @@
     <li>College</li>
   </ol>
 </div>
-<div class="skills">
+<div class="work">
   <h3>Skills</h3>
   <ul>
     <li>I do things well</li>
